applications/admin-dashboard/overlays/production/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: admin-dashboard
  namespace: admin-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`admin.vngenterprise.com`)
      kind: Rule
      services:
        - name: admin-dashboard
          port: 3000
  tls:
    store:
      name: default
      namespace: traefik-internal
